--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,10 @@ jobs:
         os: [ubuntu-latest, windows-2016]
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@main
+        with: 
+          name: webpack artifacts
+          path: /
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
