--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,7 @@ jobs:
         path: public/
   test: 
     runs-on: ubuntu-latest
+    needs: build
     strategy:
       matrix:
         node-version: [12.x, 14.x]
