--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -5,4 +5,11 @@ on: pull_request_review
 jobs:
   labelWhenApproved:
     runs-on: ubuntu-latest
-    
+
+    steps:
+      - name: Approve 
+        uses: pullreminders/label-when-approved-action@master
+        env:
+          APPROVALS: 1
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ADD_LABEL: APPRV_LBL
